added myself to info.yml

--- a/info.yml
+++ b/info.yml
@@ -20,3 +20,9 @@ project:
       githubUsername: 'andrew200101'
       pivotalUsername: 'ANDREWZHANG2'
       herokuEmail: 'ayyzhang@berkeley.edu'
+    member3:
+      name: 'Pranathi'
+      surname: 'Peri'
+      githubUsername: 'pranathip'
+      pivotalUsername: 'pranathiperi'
+      herokuEmail: 'pranathiperi@berkeley.edu'
