--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "@rails/ujs": "^6.0.3-1",
-        "@rails/webpacker": "^5.1.1",
+        "@rails/webpacker": "5.1.1",
         "bootstrap": "^4.5.0",
         "bootswatch": "^4.5.0",
         "d3": "^5.16.0",
@@ -31,7 +31,7 @@
         "eslint-config-airbnb-base": "^14.1.0",
         "eslint-plugin-import": "^2.20.2",
         "mapshaper": "^0.5.10",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^4.6.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
