--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
       - 'db/seeds.rb'
       - 'db/schema.rb'
       - 'config/routes.rb'
+      - 'app/models/representative.rb'
 
 Rails:
     Enabled: true
